toolchain/engine/src/engine2/plan/snapshots/knot_engine__engine2__plan__analyze__tests__analyze_multiple_files.snap
---
source: toolchain/engine/src/engine2/plan/analyze.rs
expression: main.typed
---
Some(
    Program(
        Program(
            Module(
                Node(
                    Module {
                        imports: [
                            Import(
                                Node(
                                    Import {
                                        source: Root,
                                        path: [
                                            "foo",
                                            "foo",
                                        ],
                                        alias: None,
                                    },
                                    Range(
                                        Point(
                                            1,
                                            1,
                                        ),
                                        Point(
                                            1,
                                            13,
                                        ),
                                    ),
                                    (
                                        CanonicalId(
                                            ModuleId(
                                                0,
                                            ),
                                            NodeId(
                                                0,
                                            ),
                                        ),
                                        Type(
                                            Module(
                                                [
                                                    (
                                                        "FOO",
                                                        Value,
                                                        (
                                                            CanonicalId(
                                                                ModuleId(
                                                                    2,
                                                                ),
                                                                NodeId(
                                                                    0,
                                                                ),
                                                            ),
                                                            Type(
                                                                Integer,
                                                            ),
                                                        ),
                                                    ),
                                                ],
                                            ),
                                        ),
                                    ),
                                ),
                            ),
                        ],
                        declarations: [
                            Declaration(
                                Node(
                                    Constant {
                                        storage: Storage {
                                            visibility: Public,
                                            binding: Binding(
                                                Node(
                                                    Binding(
                                                        "MAIN",
                                                    ),
                                                    Range(
                                                        Point(
                                                            2,
                                                            7,
                                                        ),
                                                        Point(
                                                            2,
                                                            10,
                                                        ),
                                                    ),
                                                    (),
                                                ),
                                            ),
                                        },
                                        value_type: None,
                                        value: Expression(
                                            Node(
                                                PropertyAccess(
                                                    Expression(
                                                        Node(
                                                            Identifier(
                                                                "foo",
                                                            ),
                                                            Range(
                                                                Point(
                                                                    2,
                                                                    14,
                                                                ),
                                                                Point(
                                                                    2,
                                                                    16,
                                                                ),
                                                            ),
                                                            (
                                                                CanonicalId(
                                                                    ModuleId(
                                                                        0,
                                                                    ),
                                                                    NodeId(
                                                                        1,
                                                                    ),
                                                                ),
                                                                Type(
                                                                    Module(
                                                                        [
                                                                            (
                                                                                "FOO",
                                                                                Value,
                                                                                (
                                                                                    CanonicalId(
                                                                                        ModuleId(
                                                                                            2,
                                                                                        ),
                                                                                        NodeId(
                                                                                            0,
                                                                                        ),
                                                                                    ),
                                                                                    Type(
                                                                                        Integer,
                                                                                    ),
                                                                                ),
                                                                            ),
                                                                        ],
                                                                    ),
                                                                ),
                                                            ),
                                                        ),
                                                    ),
                                                    "FOO",
                                                ),
                                                Range(
                                                    Point(
                                                        2,
                                                        14,
                                                    ),
                                                    Point(
                                                        2,
                                                        20,
                                                    ),
                                                ),
                                                (
                                                    CanonicalId(
                                                        ModuleId(
                                                            0,
                                                        ),
                                                        NodeId(
                                                            2,
                                                        ),
                                                    ),
                                                    Type(
                                                        Integer,
                                                    ),
                                                ),
                                            ),
                                        ),
                                    },
                                    Range(
                                        Point(
                                            2,
                                            1,
                                        ),
                                        Point(
                                            2,
                                            20,
                                        ),
                                    ),
                                    (
                                        CanonicalId(
                                            ModuleId(
                                                0,
                                            ),
                                            NodeId(
                                                3,
                                            ),
                                        ),
                                        Type(
                                            Integer,
                                        ),
                                    ),
                                ),
                            ),
                        ],
                    },
                    Range(
                        Point(
                            1,
                            1,
                        ),
                        Point(
                            2,
                            21,
                        ),
                    ),
                    (
                        CanonicalId(
                            ModuleId(
                                0,
                            ),
                            NodeId(
                                4,
                            ),
                        ),
                        Type(
                            Module(
                                [
                                    (
                                        "MAIN",
                                        Value,
                                        (
                                            CanonicalId(
                                                ModuleId(
                                                    2,
                                                ),
                                                NodeId(
                                                    0,
                                                ),
                                            ),
                                            Type(
                                                Integer,
                                            ),
                                        ),
                                    ),
                                ],
                            ),
                        ),
                    ),
                ),
            ),
        ),
    ),
)
